# point-in-polygon

./: README.md  RTree.h  Zalik_implement.cpp  basci_.cpp  header.cpp  header.h  math_added.cpp  point-in-polygon-new.cpp  submit-1AddPolygonBeforeQueryPoint.cpp  submit-5MixQueryPolygon.cpp  submit-6MixQuery.cpp  test.cpp  test.in  trangular.cpp  triangulate.cpp
Zalik_1.0/: Test.cpp  main.cpp  point_in_polygon.cpp
Zalik_1.0/update/: main.cpp
ersion2.0/: CMakeLists.txt  build.sh  main
ersion2.0/yourcode/: header.cpp  submit-2AddPointBeforeQueryPolygon.cpp  submit-3AddBeforeQuery.cpp  submit-6MixQuery.cpp
failed/: test_tri.cpp  triangulate.cpp
r-star-tree-master/: main.cpp
update/: main.cpp
update/version1.0/: readme.txt
update/version1.1/: header.cpp  header.h  submit-1AddPolygonBeforeQueryPoint.cpp  submit-2AddPointBeforeQueryPolygon.cpp  submit-3AddBeforeQuery.cpp  submit-4MixQueryPoint.cpp  submit-5MixQueryPolygon.cpp  submit-6MixQuery.cpp
update/version1.2/: header.cpp  header.h  point-in-polygon-new.cpp  submit-1AddPolygonBeforeQueryPoint.cpp  submit-2AddPointBeforeQueryPolygon.cpp  submit-2AddPointBeforeQueryPolygon.h  submit-3AddBeforeQuery.cpp  submit-4MixQueryPoint.cpp  submit-5MixQueryPolygon.cpp  submit-6MixQuery.cpp
update/version1.3/: header.cpp  header.h  submit-1AddPolygonBeforeQueryPoint.cpp  submit-2AddPointBeforeQueryPolygon.cpp  submit-3AddBeforeQuery.h
update/version1.5(intervalTreeVersion)/: README.md  header.cpp  header.h  submit-1AddPolygonBeforeQueryPoint.cpp  submit-2AddPointBeforeQueryPolygon.cpp  submit-4MixQueryPoint.cpp  (+1 more)
(+70 files in other folders)
